--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <h1>File Upload</h1>
-    <form action="/Download" method="post" enctype="multipart/form-data">
+    <form action="/Downloads" method="post" enctype="multipart/form-data">
       <input type="file" name="files" multiple />
       <button>Submit</button>
     </form>
