--- a/index.html
+++ b/index.html
@@ -12,5 +12,7 @@
       <input type="file" name="files" multiple />
       <button>Submit</button>
     </form>
+    <h2>View File Upload</h2>
+   <a href="/Downloads"style="text-decoration:none;">Lihat</a>
   </body>
 </html>
