--- a/index.html
+++ b/index.html
@@ -13,6 +13,6 @@
       <button>Submit</button>
     </form>
     <h2>View File Upload</h2>
-   <a href="/Downloads"style="text-decoration:none;">Lihat</a>
+   <a href="/Download"style="text-decoration:none;">Lihat</a>
   </body>
 </html>
